--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,10 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href="https://cdn.jsdelivr.net/npm/@coreui/coreui@4.2.0/dist/css/coreui.min.css" 
+      rel="stylesheet" 
+      integrity="sha384-UkVD+zxJKGsZP3s/JuRzapi4dQrDDuEf/kHphzg8P3v8wuQ6m9RLjTkPGeFcglQU" 
+      crossorigin="anonymous">
     <link rel="stylesheet" href="./reset.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
